--- a/style.css
+++ b/style.css
@@ -33,3 +33,8 @@ p.byline { font-style: italic; color: #B6B6B6; font-size: 24px; margin-top: 20px
 	position:relative;
 	top:1px;
 }
+
+.center{
+    display: table;
+    margin: 0 auto;
+}
