--- a/style.css
+++ b/style.css
@@ -45,9 +45,9 @@ p.byline { font-style: italic; color: #B6B6B6; font-size: 24px; margin-top: 20px
 }
 
 .hidden{
-    visibility: hidden
+    visibility: hidden;
 }
 
 .visible{
-    visibility: ""
+    visibility: "";
 }
