--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 h1 { color: #d54d7b; font-family: "Great Vibes", cursive; font-size: 100px; line-height: 100px; font-weight: normal; margin-bottom: 0px; margin-top: 40px; text-align: center; text-shadow: 0 1px 1px #fff; }
 
+h2 { color: #7a7c7f; font-family: "Great Vibes", cursive; font-size: 50px; line-height: 500px; font-weight: normal; margin-bottom: 0px; margin-top: 40px; text-align: center; text-shadow: 0 1px 1px #fff; }
 
 p { color: #7a7c7f; font-size: 29px; font-family: "Libre Baskerville", serif; line-height: 45px; text-align: center; text-shadow: 0 1px 1px #fff; padding-top: 20px; }
 
@@ -37,6 +38,7 @@ p.byline { font-style: italic; color: #B6B6B6; font-size: 24px; margin-top: 20px
 .center{
     display: table;
     margin: 0 auto;
+    margin-top: 2.5rem;
 }
 
 .hint{
