--- a/style.css
+++ b/style.css
@@ -46,6 +46,11 @@ p.byline { font-style: italic; color: #B6B6B6; font-size: 24px; margin-top: 20px
     text-decoration: underline;
 }
 
+.msg{
+    color: red;
+    text-decoration: underline;
+}
+
 .hidden{
     visibility: hidden;
 }
