--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 h1 { color: #d54d7b; font-family: "Great Vibes", cursive; font-size: 100px; line-height: 100px; font-weight: normal; margin-bottom: 0px; margin-top: 40px; text-align: center; text-shadow: 0 1px 1px #fff; }
 
-h2 { color: #000000; font-family: "Great Vibes", cursive; font-size: 40px; line-height: 40px; font-weight: normal; margin-bottom: 0px; margin-top: 10px; text-align: center; text-shadow: 0 1px 1px #fff; }
+h2 { color: #000000; font-size: 50px; line-height: 50px; font-weight: normal; margin-bottom: 0px; margin-top: 10px; text-align: center; text-shadow: 0 1px 1px #fff; }
 
 h4 { color: #7a7c7f; font-family: "Great Vibes", cursive; font-size: 20px; line-height: 20px; font-weight: normal; margin-bottom: 0px; margin-top: 10px; text-align: center; text-shadow: 0 1px 1px #fff; }
 
